--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -3,11 +3,43 @@
     margin: 0;
     padding: 0;
 }
+button {
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+}
 
-#header-general{
+body{
+    font-family: Arial;
+    background-color: white;
+}
+#header-general, #header-general-gestion{
     display: grid;
-    grid-template-colums: 1fr;
-    background-color: #FFE5D4;
+    grid-template-colunms: 1fr;
+    background-color: #FFF3E9;
+    width: 100%;
+
+
+}
+.top-header{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    width: 100%;
+    height: 5vh;
+    background-color: black;
+    color: white;
+    top: 0;
+
+
+}.top-header svg{
+    margin-top: 1vh;
+   height: 3vh;
+}
+.top-header div:last-child{
+    align-self: center;
 }
 .header-top{
 display: grid;
@@ -21,15 +53,13 @@ display: grid;
 }
 .header-top-elementos{
     margin-top: 5vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    /*display: flex;*/
-    /*justify-content:flex-end;*/
+    display: flex;
+    justify-content: flex-end;
     height: 2vh;
 
 }
 .header-top-elementos div, .header-top-elementos div svg{
- width: 100%;
+ /*width: 100%;*/
  }
 .header-top-elementos div:first-child{
     justify-self: end;
@@ -49,11 +79,22 @@ display: grid;
 }
 .navegador{
     text-align: center;
+    padding-bottom: 5vh;
 }
 .navegador a{
-    font-size: 16pt;
+    color: black;
+    font-size: 18pt;
     margin-left: 10px;
     margin-right: 10px;
+    text-decoration: none;
+
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+.post-descripcion a{
+    color: #3490dc;
 }
 /*---------------------------------------------------------------*/
 
@@ -72,27 +113,422 @@ display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
 .index-productos-miniaturas{
+
     text-align: center;
-    width: 100%;
-    height: 20vh;
+    width: 300px;
+    height: 200px;
 }
 
 .index-productos-miniaturas img{
     max-width:100%;
     max-height:100%;
+    /*width: 234px;*/
+    /*height: 234px;*/
 }
 
 
 .productos-nuevo form{
-    margin-left: 40%;
-    margin-right: 40%;
-    display: grid;
-    grid-template-columns: 1fr;
+
 }
+
+.formulario-crear{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 25%;
+    margin-right: 25%;
+    grid-column-gap: 20px;
+}
+
 .btn-crear{
     cursor: pointer;
     background-color: lightgreen;
     margin-left:25%;
     margin-right:25%;
     height: 40px;
+}
+/*---------Producto-show------------*/
+.show-productos{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 5vh;
+}
+.show-productos-img{
+    justify-self: end;
+ height: 60vh;
+    /*grid-column-start: 2;*/
+
+ }
+.show-productos-img img{
+max-width: 100%;
+max-height: 100%;
+}
+.show-productos-cantidad input{
+    text-align: center;
+}
+.data-product, .data-product-carrito-modal, .data-product-carrito{
+    display: none;
+}
+
+/*-------------CARRITO---------------*/
+.index-carrito{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+.producto-carrito{
+    height: 200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    justify-content: center;
+    align-self: center;
+}
+.producto-carrito img{
+    max-width: 80%;
+    max-height: 80%;
+}
+
+.carrito-modal{
+    display: none;
+position: absolute;
+    top: 0;
+    right: 0;
+height: 100vh!important;
+    width: 25% !important;
+    background-color: white;
+    border-left: solid 6px #E1E1E1;
+    overflow-y: auto;
+}
+
+.carrito-modal-estructura{
+    display: grid;
+    grid-auto-rows: 130px;
+}
+
+.carrito-boton, .cerrar-modal{
+
+
+    cursor: pointer;
+}
+.modal-div{
+    display: none;
+    z-index: 10000;
+    top: 2%;
+    right: 0;
+    width: 3%!important;
+
+}
+.titulo-cesta-modal{
+    background-color: #E1E1E1;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 8px;
+    margin-bottom: 2vh;
+}
+.titulo-cesta-modal h1{
+    padding-left: 8px;
+}
+.cerrar-modal{
+
+    font-weight: 400;
+    text-decoration: underline;
+    margin-top: 10%;
+    font-size: 8pt;
+    padding-bottom: 20px;
+}
+
+.carrito-modal-producto img{
+
+    justify-self: center;
+    align-self: center;
+    grid-auto-flow: row dense;
+    width: 90px;
+    height: 90px;
+
+
+}
+.carrito-modal-producto{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.input-value-modal{
+    width: 20px;
+    max-width: 200px;
+    text-align: center;
+    font-size: 8pt;
+    font-weight: bold;
+}
+.input-value{
+    width: 20px;
+    max-width: 200px;
+    text-align: center;
+    font-size: 8pt;
+    font-weight: bold;
+}
+.total-modal:after{
+    content: "€";
+}
+.input-value-carrito{
+    width: 15%;
+    text-align: center;
+}
+.text-tam{
+    font-size: 7pt;
+}
+.text-tam:last-child{
+    font-weight: bold;
+}
+
+.carrito-modal-footer{
+    text-align: center;
+
+}
+
+.carrito-modal-links{
+    display: inline-block;
+    width: 80%;
+    border: 2px solid black;
+    padding: 6px;
+}
+.link-cesta{
+    margin-bottom: 10px;
+}
+.link-pagar{
+    color: white;
+    background-color: black;
+}
+.carrito-modal-links:first-child{
+    margin-bottom: 10px;
+}
+
+/*-------------HOME--------------*/
+.home-images-front{
+    height: 60vh;
+}
+.home-images-front img{
+    max-height: 100%;
+    width: 100%;
+}
+.home-mas-vendidos{
+    margin-left: 20vh;
+    margin-right: 20vh;
+    height: 80vh;
+
+}
+.busquedas{
+    margin-left: 20vh;
+    margin-right: 20vh;
+ }
+.home-mas-vendidos h1{
+    text-align: center;
+    margin-bottom: 10vh;
+}
+.miniatura-home{
+    display: grid;
+    grid-template-columns: 1fr;
+ text-align: center;
+
+}
+.miniatura-home img{
+
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.miniatura-home-padre {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 20px;
+}
+.lineas{
+   width: 20px;
+    height: 2px;
+    background-color: black;
+    margin-top: 15px;
+}
+.titulos{
+    margin-top:8vh;
+    display: flex;
+    justify-content: center;
+
+}
+.titulos h1{
+
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.home-post{
+    margin-left: 40vh;
+    margin-right: 40vh;
+}
+.home-post img{
+    width: 100%;
+    height: 380px;
+    text-align: center;
+    z-index: -10000;
+}
+
+.post-descripcion{
+    position:relative;
+    margin-top: -50px;
+    z-index: 10000;
+    background-color: white;
+    margin-left: 4vw;
+    margin-right: 4vw;
+    padding: 5vw;
+
+}
+.miniatura-home-cursos{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 15vh;
+    grid-column-gap: 50px;
+    margin-bottom: 5vh;
+}
+.miniatura-home-cursos div{
+
+    border: 1px solid black;
+    height: 25vh;
+
+}
+.home-post{
+    margin-left: 23vw;
+    margin-right: 23vw;
+}
+.home-post h1{
+    margin-bottom: 8vh;
+}
+
+
+
+/*------------FOOTER--------------*/
+.footer-principal{
+    margin-top: 10vh;
+    padding: 5vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: #F0F0F0;
+}
+.footer-principal div:first-child{
+    margin-left: 15vw;
+}
+.footer-principal div:last-child{
+    margin-right: 15vw;
+}
+.footer-principal div:last-child p{
+    margin-top: 2vh;
+    margin-left: 5vw;
+    width: 8vw;
+}
+ li{
+     list-style:none
+ }
+ .footer-2{
+     background-color: #E3E4E1;
+     padding: 1vh;
+ }
+ .footer-2 p{
+     margin-left: 15vw;
+ }
+
+ .rss svg:first-child{
+     margin-left: 10px;
+ }
+
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100000;
+}
+.add-producto-miniatura{
+    position: relative;
+    top: -20vh;
+    font-size: 16pt;
+    border: 2px solid black;
+}
+.add-producto-miniatura{
+    display: none;
+}
+.precio-total-producto:before{
+    content: "€ ";
+}
+
+.papelera{
+    width: 50px!important;
+    cursor: pointer;
+}
+.total-modal-carrito{
+    font-weight: bold;
+    margin-top: 5px;
+    margin-bottom: 25px;
+}
+.total-modal-carrito:before{
+    content: "€ ";
+}
+
+.total-modal-carrito:after{
+    content: " EUR";
+}
+
+.separador{
+    background-color: #E1E1E1;
+    text-align: center;
+    height: 1px;
+    margin-right: 7%;
+    margin-left: 7%;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+/*---------------LOGIN----------------*/
+.login-body{
+    text-align: center;
+}
+
+#carrusel-5,#carrusel-6, #carrusel-7, #carrusel-8, #carrusel-9, #carrusel-10{
+    display: none;
+}
+.carrusel-position{
+    grid-column-start: -1;
+
+}
+/* carrusel home*/
+.adelante{
+    position: relative;
+    top: -250px;
+    left: -100px;
+}
+.atras{
+    position: relative;
+    top: -250px;
+    right: -78vw;
+}
+.card-modific{
+    width: 50vw;
+}
+.link-registro{
+    width: 100%;
+text-align: center;
+
+}
+.link-registro a{
+  color: #3490dc;
+    text-decoration: underline;
+text-underline: #3490dc;
+}
+
+.btn-add-cart{
+    color: white;
+    background-color: black;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 100px;
+    padding-right: 100px;
+    letter-spacing: 3px;
+    margin-top: 15px;
+}
+.busquedas{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
