--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -108,7 +108,8 @@ display: grid;
 .show-productos-img{
     justify-self: end;
  height: 60vh;
-    /*grid-column-start: 2;*/
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 
  }
 .show-productos-img img{
